--- a/Dockerfile.without_ci
+++ b/Dockerfile.without_ci
@@ -1,14 +1,15 @@
-FROM rust:1.44.1-alpine as build
-ADD . /code/
-WORKDIR /code/
+FROM ekidd/rust-musl-builder:1.44.1 as build
+ADD . /home/rust/src
+WORKDIR /home/rust/src
 
 #RUN apk add --no-cache ca-certificates gcc mingw-w64-gcc libc-dev musl-dev
-RUN apk add musl-dev
+#RUN rustup target add x86_64-unknown-linux-musl
+#RUN cargo build --release
 RUN cargo build --release
 
-FROM rust:1.44.1-alpine
+FROM alpine:latest
 
-COPY --from=0 /code/target/release/httpapi /web/
 WORKDIR /web/
+COPY --from=0 /home/rust/src/target/x86_64-unknown-linux-musl/release/httpapi /web/
 
 CMD ["./httpapi", "0.0.0.0:8000"]
