--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+http = "0.2.1"
 actix-web = "2.0"
 actix-rt = "1.0"
 clap = "2.33.1"
+serde="1.0.114"
+serde_json="1.0.56"
+serde_derive="1.0.114"
