--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,9 +68,11 @@ build:
     - echo $RUSTC_WRAPPER
   script:
     #- cargo build --release
-    - RUST_BACKTRACE=full cargo run
+    #- $RUSTC_WRAPPER --show-stats
+    #- cp target/release/${BUILD_ARTIFACT} ${BUILD_ARTIFACT}
+    - RUST_BACKTRACE=full cargo build
     - $RUSTC_WRAPPER --show-stats
-    - cp target/release/${BUILD_ARTIFACT} ${BUILD_ARTIFACT}
+    - cp target/debug/${BUILD_ARTIFACT} ${BUILD_ARTIFACT}
   artifacts:
     paths:
       - ${BUILD_ARTIFACT}
