use tencent mirrors for rancher dockerfile

--- a/Dockerfile.without_ci
+++ b/Dockerfile.without_ci
@@ -1,4 +1,4 @@
-FROM oldcai/rust-musl-builder:latest as build
+FROM mirror.ccs.tencentyun.com/oldcai/rust-musl-builder:latest as build
 ADD . /home/rust/src
 WORKDIR /home/rust/src
 
