--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,9 @@ clap = "2.33.1"
 serde="1.0.114"
 serde_json="1.0.56"
 serde_derive="1.0.114"
+
+[source.crates-io]
+registry = "https://github.com/rust-lang/crates.io-index"
+replace-with = 'ustc'
+[source.ustc]
+registry = "git://mirrors.ustc.edu.cn/crates.io-index"
