--- a/Dockerfile.without_ci
+++ b/Dockerfile.without_ci
@@ -4,6 +4,8 @@ WORKDIR /home/rust/src
 
 #RUN apk add --no-cache ca-certificates gcc mingw-w64-gcc libc-dev musl-dev
 #RUN rustup target add x86_64-unknown-linux-musl
+ADD user_cargo_config_in_docker.toml /home/rust/.cargo/config
+
 RUN cargo build --release
 
 FROM alpine:latest
